<resources>
    <string name="app_name">Doorbell</string>

    <!-- Strings related to Settings -->

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_general">General</string>
    <string name="notification_channel_name">Doorbell Notifications</string>
    <string name="notification_channel_description">Notifications from your doorbell</string>


    <string name="login_button">Sign In</string>
    <string name="login_summary">Register your phone number to continue</string>

    <string name="sign_in_cancelled">Login cancelled</string>
    <string name="no_internet_connection">No Internet connection available</string>
    <string name="unknown_error">Unable to sign in</string>

    <string name="login_pin">Home ID</string>
    <string name="login_pin_description">Enter the PIN associated with your home</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="push_notification_switch">Receive push notifications</string>
    <string name="phone_call_switch">Receive phone calls</string>
    <string name="sms_switch">Receive SMS messages</string>
    <string name="chime_switch">Ring doorbell chime</string>
    <string name="preferences_overview">Notification preferences</string>
    <string name="current_account">Logged in as</string>
    <string name="logout_button">Log out</string>
    <string name="last_seen">Last sync</string>

    <string name="unlock_action">Unlock Gate</string>

    <string name="action_label">action</string>
    <string name="unlock_action_id">unlockGate</string>
    <string name="unlock_confirmation">Gate unlocked</string>
    <string name="unlock_failed">Could not unlock gate</string>
    <string name="title_activity_setup">SetupActivity</string>

    <string name="firebase_pref_app_id">firebaseAppId</string>
    <string name="firebase_pref_api_key">firebaseApiKey</string>
    <string name="firebase_pref_database_url">firebaseDatabaseUrl</string>
    <string name="firebase_pref_storage_bucket">firebaseStorageBucket</string>

    <string name="firebase_init_error">Error starting Firebase</string>
    <string name="setup_summary">To get started, select the “google-services.json” config file corresponding to your Firebase app.\n<a href="https://support.google.com/firebase/answer/7015592?hl=en">Learn more</a></string>
    <string name="setup_button">Select Config File</string>

    <string name="toolbar_action_reset">Reset config</string>
    <string name="unknown">Unknown</string>
    <string name="title_activity_notification">Doorbell</string>
    <string name="occurred_on">Occurred on</string>
</resources>
