<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hestonliebowitz.dingdongditch.PrefActivity">


    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/unlock_button"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/unlock_action" />

        <TextView
            android:id="@+id/notification_general_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_header_general"
            android:layout_marginBottom="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <LinearLayout
            android:id="@+id/set_login_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="32dp"
            android:layout_gravity="">

            <TextView
                android:id="@+id/set_login_pin_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_pin"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/login_pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored" />
        </LinearLayout>

        <TextView
            android:id="@+id/notification_settings_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_header_notifications"
            android:layout_marginBottom="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <Switch
            android:id="@+id/push_notification_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:switchPadding="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/push_notification_switch" />

        <Switch
            android:id="@+id/phone_call_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:switchPadding="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/phone_call_switch" />

        <Switch
            android:id="@+id/chime_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:switchPadding="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/chime_switch" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="@color/fui_buttonShadow"
            />

        <TextView
            android:id="@+id/current_account_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="">


            <TextView
                android:id="@+id/current_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/logout_button"
                style="@android:style/Widget.Material.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout_button" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
